# Data-Diff

./: .gitignore  COPYING  Data-Diff.cabal  README  Setup.hs  TODO
Data/: Diff.hs
Data/Diff/Algorithm/: ONM.hs  ONP.hs
Text/: Patch.hs
example/: hdiff.hs
tests/: a-to-b_1.diff  a-to-b_2.diff  a-to-b_3.diff  a.txt  b.txt  t000-data-diff.hs  t001-text-patch.hs
